// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser.block.definitionList > 'empty data' 1`] = `
[
  {
    "class": "block.list.definition",
    "content": [
      {
        "class": "block.list.definition.term",
        "content": [
          {
            "class": "inline.text",
            "value": "Term
",
          },
        ],
        "data": [
          {
            "class": "block.list.definition.data",
            "content": [],
          },
        ],
      },
    ],
  },
]
`;

exports[`parser.block.definitionList > 'followed by heading' 1`] = `
[
  {
    "class": "block.list.definition",
    "content": [
      {
        "class": "block.list.definition.term",
        "content": [
          {
            "class": "inline.text",
            "value": "Term 1
",
          },
        ],
        "data": [
          {
            "class": "block.list.definition.data",
            "content": [
              {
                "class": "inline.text",
                "value": "Description 1
",
              },
            ],
          },
        ],
      },
    ],
  },
  {
    "class": "block.heading",
    "content": [
      {
        "class": "inline.text",
        "value": "Heading",
      },
    ],
    "level": 1,
  },
]
`;

exports[`parser.block.definitionList > 'leading whitespace in data' 1`] = `
[
  {
    "class": "block.list.definition",
    "content": [
      {
        "class": "block.list.definition.term",
        "content": [
          {
            "class": "inline.text",
            "value": "Term
",
          },
        ],
        "data": [
          {
            "class": "block.list.definition.data",
            "content": [
              {
                "class": "inline.text",
                "value": "one
",
              },
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`parser.block.definitionList > 'two terms and multiple definitions' 1`] = `
[
  {
    "class": "block.list.definition",
    "content": [
      {
        "class": "block.list.definition.term",
        "content": [
          {
            "class": "inline.text",
            "value": "Term 1
",
          },
        ],
        "data": [
          {
            "class": "block.list.definition.data",
            "content": [
              {
                "class": "inline.text",
                "value": "Description 1
",
              },
            ],
          },
          {
            "class": "block.list.definition.data",
            "content": [
              {
                "class": "inline.text",
                "value": "Description A
",
              },
            ],
          },
        ],
      },
      {
        "class": "block.list.definition.term",
        "content": [
          {
            "class": "inline.text",
            "value": "Term 2
",
          },
        ],
        "data": [
          {
            "class": "block.list.definition.data",
            "content": [
              {
                "class": "inline.text",
                "value": "Description 2
",
              },
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`parser.block.definitionList > 'whitespace-only data' 1`] = `
[
  {
    "class": "block.list.definition",
    "content": [
      {
        "class": "block.list.definition.term",
        "content": [
          {
            "class": "inline.text",
            "value": "Term
",
          },
        ],
        "data": [
          {
            "class": "block.list.definition.data",
            "content": [],
          },
        ],
      },
    ],
  },
]
`;

exports[`parser.block.paragraph > single paragraph 1`] = `
[
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "This is a single paragraph.",
      },
    ],
  },
]
`;
